# os2-project-3

./: .gitignore  CMakeLists.txt  README.md
include/: Descrambler.hpp  Ncurses.hpp  NumberGenerator.hpp  Scrambler.hpp  Semaphore.hpp  Simulation.hpp  StatisticsGenerator.hpp  Terminator.hpp  TimeCounter.hpp  WordGenerator.hpp
src/: Descrambler.cpp  Ncurses.cpp  NumberGenerator.cpp  Scrambler.cpp  Semaphore.cpp  Simulation.cpp  StatisticsGenerator.cpp  Terminator.cpp  TimeCounter.cpp  WordGenerator.cpp  main.cpp
